Tilde en titulo de Exploracion fisica

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
@@ -35,7 +35,7 @@
 			
 			<!-- contenido -->
 			<div data-role="content">
-				<h2>Exploración física</h2>
+				<h2>Exploraci&oacute;n f&iacute;sica</h2>
 				
 				<div class="content2">		
 					<h4>DATOS PERSONALES</h4>
