--- a/client-app/androidApp/platforms/android/assets/www/pages/video_nuevo.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/video_nuevo.html
@@ -13,12 +13,13 @@
 		
 		<script type="text/javascript" src="../cordova.js"></script>
 		<script type="text/javascript" src="../index.js"></script>		
+		<script type="text/javascript" src="../js/ctrl.generic.js"></script>	
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
 		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>		
 
 				
 		<script type="text/javascript">
-			app.initialize();
+			generic.initialize();
 		</script>
 	</head>
 	<body>
