Implementación de las gráficas de ficheros .emt

--- a/client-app/androidApp/platforms/android/assets/www/pages/video_listado.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/video_listado.html
@@ -54,15 +54,13 @@
 				<div class="content2">
 					<!--Listado de videos -->								
 					
-					<ul data-role="listview" data-inset="true" id="videoList">	     
-					
-     				</ul>
+					<ul data-role="listview" data-inset="true" id="videoList"></ul>
 				</div>	
 			</div>
 			
 			<!-- Footer -->
-			<div data-role="footer" data-position="inline" data-theme="c">
-				<center><br><br><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/><br></center>
+			<div data-role="footer" data-position="inline" data-theme="c" data-position="fixed" data-tap-toggle="false">
+				<center><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/></center>
 			</div>	
 		</div>	 
 
