--- a/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
@@ -9,16 +9,18 @@
 		<link rel="stylesheet" href="../css/themes/hospital_css.min.css" />
 		<link rel="stylesheet" href="../css/themes/jquery.mobile.icons.min.css" />
 		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />		
-		<link type="text/css" rel="stylesheet" href="../css/jquery.mobile-datebox.min.css" /> 
+		<link type="text/css" rel="stylesheet" href="../css/jquery.mobile-datebox.min.css" /> 		
 		
-		<script type="text/javascript" src="../cordova.js"></script>
-		<script type="text/javascript" src="../index.js"></script>		
+		<script type="text/javascript" src="../cordova.js"></script> 
+		<script type="text/javascript" src="../index.js"></script>
+		
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
 		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>		
 		<script type="text/javascript" src="../js/jquery.mobile-datebox.core.min.js"></script>
 		<script type="text/javascript" src="../js/jquery.mobile-datebox.mode.flipbox.min.js"></script>
 		<script type="text/javascript" src="../js/jquery.mobile-datebox.i18n.en_US.utf8.js"></script>		
 		<script type="text/javascript" src="../js/val_articular_muscular.js"></script>
+		<script type="text/javascript" src="server.js"></script>
 		
 		<script type="text/javascript">
 			app.initialize();
