--- a/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/paciente.html
@@ -8,20 +8,18 @@
 
 		<link rel="stylesheet" href="../css/themes/hospital_css.min.css" />
 		<link rel="stylesheet" href="../css/themes/jquery.mobile.icons.min.css" />
-		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />		
-		<link type="text/css" rel="stylesheet" href="../css/jquery.mobile-datebox.min.css" /> 
+		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />
 		
-		<script type="text/javascript" src="../cordova.js"></script> 
-		<script type="text/javascript" src="../index.js"></script>
-		
+		<script type="text/javascript" src="../cordova.js"></script>
+		<script type="text/javascript" src="../index.js"></script>		
+		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
+		<script type="text/javascript" src="../js/server.js"></script>
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>		
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.core.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.mode.flipbox.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.i18n.en_US.utf8.js"></script>		
+		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>
+		<script type="text/javascript" src="../js/pages/paciente.js"></script>
 		
 		<script type="text/javascript">
-			app.initialize();
+			generic.initialize();
 		</script>
 	</head>
 
@@ -98,9 +96,9 @@
 				</div>
 			</div>
 
-			<!-- Footer -->
+			<!-- Pie -->
 			<div data-role="footer" data-position="inline" data-theme="c">
-				<center><br><br><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/><br></center>		
+				<center><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/></center>
 			</div>							
 		</div>
 	</body>
