--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/FAQs.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/FAQs.html
@@ -6,26 +6,27 @@
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-		<link type="text/css" rel="stylesheet" href="../css/jquery.mobile-1.4.1.min.css">
-
-
-		<script type="text/javascript" src="../js/index.js"></script>
+		<link rel="stylesheet" type="text/css" href="../css/themes/hospital_css.min.css" />
+		<link rel="stylesheet" type="text/css" href="../css/themes/jquery.mobile.icons.min.css" />
+		<link rel="stylesheet" type="text/css" href="../css/jquery.mobile.structure-1.4.2.min.css" />
+		
+		<script type="text/javascript" src="../cordova.js"></script>
+		<script type="text/javascript" src="../index.js"></script>		
+		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
+		<script type="text/javascript" src="../js/server.js"></script>	
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>
-        <script type="text/javascript" src="../js/FAQs/faqs.js"></script>
-
-        <title>FAQs</title>
+		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>
 
         <style type="text/css">
-            .hide {
-                display: none;
-            }
+            .hide { display: none; }
         </style>
-
-</head>
-<body>
-
-	<div data-role="page" data-theme="a" id="page1">
+		<script type="text/javascript">
+			generic.initialize();
+		</script>
+	</head>
+	<body>
+	
+		<div data-role="page" data-theme="a" id="page1">
 			<div data-role="header" >
 				<h2>FAQs</h2>
 				<a href="../home.html" data-icon="home" data-iconpos="notext" data-direction="reverse">Home</a>
@@ -84,11 +85,11 @@
                 </div>
 
 			</div>
-			<div data-role="footer">
-				<h4>&copy; Copyright Info or Site URL</h4>
+			
+			<!-- Pie -->
+			<div data-role="footer" data-position="inline" data-theme="c">
+				<center><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/></center>
 			</div>
 		</div>
-
-
-</body>
+	</body>
 </html>
