--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_listado.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_listado.html
@@ -8,15 +8,14 @@
 
 		<link rel="stylesheet" href="../css/themes/hospital_css.min.css" />
 		<link rel="stylesheet" href="../css/themes/jquery.mobile.icons.min.css" />
-		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />		
-		<link type="text/css" rel="stylesheet" href="../css/jquery.mobile-datebox.min.css" /> 
+		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />
 		
 		<script type="text/javascript" src="../cordova.js"></script>
 		<script type="text/javascript" src="../index.js"></script>
 		<script type="text/javascript" src='../js/server.js'></script>
 		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>		
+		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>		
 			
 		<script type="text/javascript">
 			generic.initialize(buscarGraficas);
@@ -53,10 +52,10 @@
 				</div>	
 			</div>
 			
-			<!-- Footer -->
-			<div data-role="footer" data-position="inline" data-theme="c" data-position="fixed" data-tap-toggle="false">
+			<!-- Pie -->
+			<div data-role="footer" data-position="inline" data-theme="c">
 				<center><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/></center>
-			</div>	
+			</div>
 		</div>	 
 
 	</body>
