--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
@@ -6,22 +6,67 @@
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-		<link rel="stylesheet" href="../css/themes/hospital_css.min.css" />
-		<link rel="stylesheet" href="../css/themes/jquery.mobile.icons.min.css" />
-		<link rel="stylesheet" href="../css/jquery.mobile.structure-1.4.2.min.css" />		
-		<link type="text/css" rel="stylesheet" href="../css/jquery.mobile-datebox.min.css" /> 
+		<link rel="stylesheet" type="text/css" href="../css/themes/hospital_css.min.css" />
+		<link rel="stylesheet" type="text/css" href="../css/themes/jquery.mobile.icons.min.css" />
+		<link rel="stylesheet" type="text/css" href="../css/jquery.mobile.structure-1.4.2.min.css" />
 		
-		<script type="text/javascript" src="../cordova.js"></script> 		
-		<script type="text/javascript" src="../index.js"></script>
-		
+		<script type="text/javascript" src="../cordova.js"></script>
+		<script type="text/javascript" src="../index.js"></script>		
+		<script type="text/javascript" src="../js/ctrl.generic.js"></script>
+		<script type="text/javascript" src="../js/server.js"></script>	
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
-		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>		
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.core.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.mode.flipbox.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.i18n.en_US.utf8.js"></script>		
+		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>			
 		
 		<script type="text/javascript">
-			app.initialize();
+			generic.initialize();
+
+            function login() {
+				$.ajax({
+					type : 'POST',
+					url : "http://localhost:8080/hospitalServer/j_spring_security_check",
+					data : {'j_username': $("#txtUsuario").val(), 'j_password': $("#txtPwd").val()},
+					dataType : 'json',
+					beforeSend: function (request) {
+						$.mobile.loading( 'show', {
+  						text: 'Procesando',
+  						textVisible: true,
+  						theme: "b",
+  						textonly: false
+  						});
+		                request.setRequestHeader("X-Ajax-call", true);
+		            },
+		            complete : function(jqXHR, textStatus) {
+		            	$.mobile.loading('hide');
+            			if (jqXHR.statusText == "No Autorizado") {
+                  			toast("Usuario y/o contrase&ntilde;a incorrectos");
+            			}
+            			else if (jqXHR.statusText == "OK") {
+                  			$.mobile.changePage('home.html','#loginpage', { transition: "slide"} ); 
+            			}
+            			else{
+            				toast("Se ha producido un error en servidor");
+            			}
+	            	}
+				});
+			}
+			
+			
+				var toast=function(msg){
+					$("<div class='ui-loader ui-overlay-shadow ui-body-e ui-corner-all'><h3>"+msg+"</h3></div>")
+					.css({ display: "block", 
+						opacity: 0.90, 
+						position: "fixed",
+						padding: "7px",
+						"text-align": "center",
+						width: "270px",
+						left: ($(window).width() - 284)/2,
+						top: $(window).height()/2 })
+					.appendTo( $.mobile.pageContainer ).delay( 1500 )
+					.fadeOut( 600, function(){
+						$(this).remove();
+					});
+				}
+        </script>
 		</script>
 	</head>
 
@@ -52,7 +97,7 @@
 					</div>
 					
 					<ul data-role="listview" data-inset="true" data-filter="false" data-theme="b">						
-						<li><a data-transition="slidedown" rel="external" href="menu.html">Entrar</a></li>
+						<li><a data-transition="slidedown" rel="external" href="#" onclick="javascript:login();">Entrar</a></li>
 						<li><a data-transition="slidedown" rel="external" href="#">Recordar clave</a></li>             
 					</ul>
 				</div>
@@ -60,7 +105,7 @@
 
 			<!-- Footer -->
 			<div data-role="footer" data-position="inline" data-theme="c">
-				<center><br><br><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/><br></center>		
+				<center><img src="../img/tituloLAMPie.png"/><br><img src="../img/tituloLAMPie2.png"/></center>		
 			</div>							
 		</div>
 	</body>
