Parte cliente de recordar contraseña

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
@@ -26,7 +26,7 @@
 			
 			function cargarGrafica(){
 				var id = generic.getURLParameter("id");
-	            server.get('1/ficheroEMT/' + id, null, callbackCargarGrafica);
+	            server.get('paciente/1/ficheroEMT/' + id, null, callbackCargarGrafica);
 	            $("#angleType").change( function(){
 	            	var value = this.value;
 	            	mostrarGrafica("aR" + value, "aL" + value);
