--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
@@ -23,8 +23,8 @@
             function login() {
 				$.ajax({
 					type : 'POST',
-					url : "http://localhost:8080/hospitalServer/j_spring_security_check",
-					data : {'j_username': $("#txtUsuario").val(), 'j_password': $("#txtPwd").val()},
+					url : "http://192.168.1.130:8080/hospitalServer/j_spring_security_check",
+					data : {'j_username': $("#txtUsuario").val(), 'j_password': $("#txtPassword").val()},
 					dataType : 'json',
 					beforeSend: function (request) {
 						$.mobile.loading( 'show', {
@@ -41,7 +41,7 @@
                   			toast("Usuario y/o contrase&ntilde;a incorrectos");
             			}
             			else if (jqXHR.statusText == "OK") {
-                  			$.mobile.changePage('home.html','#loginpage', { transition: "slide"} ); 
+            				generic.changePage('home.html');
             			}
             			else{
             				toast("Se ha producido un error en servidor");
@@ -88,17 +88,17 @@
 					<h5><font style="font-weight: normal">Introduzca los</font> datos de acceso:</h5>
 					
 					<div data-role="fieldcontain" >
-						<label for="login">Login</label>
-						<input type="text" id="login" name="login"/>						
+						<label for="txtUsuario">Usuario</label>
+						<input type="text" id="txtUsuario" name="txtUsuario"/>						
 					</div>	
 					<div data-role="fieldcontain" >
-						<label for="Password">Password</label>
-						<input type="password" id="Password" name="Password" />						
+						<label for="txtPassword">Contrase&ntilde;a</label>
+						<input type="password" id="txtPassword" name="txtPassword" />						
 					</div>
 					
 					<ul data-role="listview" data-inset="true" data-filter="false" data-theme="b">						
-						<li><a data-transition="slidedown" rel="external" href="#" onclick="javascript:login();">Entrar</a></li>
-						<li><a data-transition="slidedown" rel="external" href="#">Recordar clave</a></li>             
+						<li><a data-transition="slidedown" rel="external" onclick="javascript:login();">Entrar</a></li>
+						<li><a data-transition="slidedown" rel="external" onclick="javascript:generic.changePage('recordar_contrasenna.html');">Recordar contrase&ntilde;a</a></li>             
 					</ul>
 				</div>
 			</div>
