--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/login.html
@@ -16,57 +16,9 @@
 		<script type="text/javascript" src="../js/server.js"></script>	
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
 		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.js'></script>			
-		
+		<script type="text/javascript" src='../js/pages/login.js'></script>	
 		<script type="text/javascript">
 			generic.initialize();
-
-            function login() {
-				$.ajax({
-					type : 'POST',
-					url : "http://192.168.1.130:8080/hospitalServer/j_spring_security_check",
-					data : {'j_username': $("#txtUsuario").val(), 'j_password': $("#txtPassword").val()},
-					dataType : 'json',
-					beforeSend: function (request) {
-						$.mobile.loading( 'show', {
-  						text: 'Procesando',
-  						textVisible: true,
-  						theme: "b",
-  						textonly: false
-  						});
-		                request.setRequestHeader("X-Ajax-call", true);
-		            },
-		            complete : function(jqXHR, textStatus) {
-		            	$.mobile.loading('hide');
-            			if (jqXHR.statusText == "No Autorizado") {
-                  			toast("Usuario y/o contrase&ntilde;a incorrectos");
-            			}
-            			else if (jqXHR.statusText == "OK") {
-            				generic.changePage('home.html');
-            			}
-            			else{
-            				toast("Se ha producido un error en servidor");
-            			}
-	            	}
-				});
-			}
-			
-			
-				var toast=function(msg){
-					$("<div class='ui-loader ui-overlay-shadow ui-body-e ui-corner-all'><h3>"+msg+"</h3></div>")
-					.css({ display: "block", 
-						opacity: 0.90, 
-						position: "fixed",
-						padding: "7px",
-						"text-align": "center",
-						width: "270px",
-						left: ($(window).width() - 284)/2,
-						top: $(window).height()/2 })
-					.appendTo( $.mobile.pageContainer ).delay( 1500 )
-					.fadeOut( 600, function(){
-						$(this).remove();
-					});
-				}
-        </script>
 		</script>
 	</head>
 
@@ -97,7 +49,7 @@
 					</div>
 					
 					<ul data-role="listview" data-inset="true" data-filter="false" data-theme="b">						
-						<li><a data-transition="slidedown" rel="external" onclick="javascript:login();">Entrar</a></li>
+						<li><a data-transition="slidedown" rel="external" onclick="javascript:login.acceso();">Entrar</a></li>
 						<li><a data-transition="slidedown" rel="external" onclick="javascript:generic.changePage('recordar_contrasenna.html');">Recordar contrase&ntilde;a</a></li>             
 					</ul>
 				</div>
