--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/video_nuevo.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/video_nuevo.html
@@ -64,7 +64,7 @@
 		        options.headers = { Connection: "close" };
 		        
 		        ft.upload(path,
-		            encodeURI(server.URI + "1/videoUpload"),
+		            encodeURI(server.URI + "pacientemovil/1/videoupload"),
 		            uploadFileSuccess,
 		            uploadFileError,
 		            options);
