--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_listado.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_listado.html
@@ -21,7 +21,7 @@
 			generic.initialize(buscarGraficas);
 			
 			function buscarGraficas(){
-				server.get('paciente/1/ficherosEMT', null, mostrarListado);
+				server.get('pacientemovil/1/ficherosEMT', null, mostrarListado);
 	        }
 	        
 	        function mostrarListado(parameters){
