--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/video_listado.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/video_listado.html
@@ -21,7 +21,7 @@
 			generic.initialize(buscarVideos);
 			
 			function buscarVideos(){
-				server.get('paciente/1/video', null, mostrarListado);
+				server.get('pacientemovil/1/video', null, mostrarListado);
 	        }
 	        
 	        function mostrarListado(parameters){
