Preparada la búsqueda de pacientes y la recuperación de uno por su id para mostrarlo en la pantalla de edición

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/FAQs.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/FAQs.html
@@ -27,10 +27,16 @@
 	<body>
 	
 		<div data-role="page" data-theme="a" id="page1">
-			<div data-role="header" >
-				<h2>FAQs</h2>
-				<a href="../home.html" data-icon="home" data-iconpos="notext" data-direction="reverse">Home</a>
+			<div data-role="header">                    
+				<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
+				<a data-rel="back" data-icon="back">Volver</a>
+				
+				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
+					<h2 class="subtitle">FAQs</h2>
+					<div id="username" class="username"></div>
+				</div>
 			</div>
+			
 
 			<div data-role="content">
                 <a href="#" class="ui-btn ui-corner-all ui-icon-search ui-btn-icon-left showSearch">Buscar</a>
