--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_detalle.html
@@ -86,16 +86,18 @@
 	<body>
 
 		<div data-role="page">
-			<!-- Cabecera -->
 			<div data-role="header">                    
-				<h3>Gr&aacute;fica</h3>
+				<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 				<a data-rel="back" data-icon="back">Volver</a>
-			</div>			
+				
+				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
+					<h2 class="subtitle">Gr&aacute;fica de fichero EMT</h2>
+					<div id="username" class="username"></div>
+				</div>
+			</div>
 			
 			<!-- Contenido -->
-			<div data-role="content">			
-				<h2 id="numeroGrafica">Gr&aacute;fica</h2>
-				
+			<div data-role="content">
 				<div class="content2">
 					<div data-role="fieldcontain">	
 						<select id="angleType">
