--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/video_nuevo.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/video_nuevo.html
@@ -75,15 +75,18 @@
 
 		<div data-role="page">
 			<!-- Cabecera -->
-			<div data-role="header">                    
-				<h3>Nuevo v&iacute;deo - LAM</h3>
+			<div data-role="header">
+				<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 				<a data-rel="back" data-icon="back">Volver</a>
-			</div>			
+				
+				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
+					<h2 class="subtitle">Grabaci&oacute;n de v&iacute;deo</h2>
+					<div id="username" class="username"></div>
+				</div>
+			</div>		
 			
 			<!-- Contenido -->
-			<div data-role="content">			
-				<h2>Nuevo v&iacute;deo</h2>
-				
+			<div data-role="content">
 				<div class="content2">
 					<!--Descripcion del video -->			
 					<div data-role="fieldcontain">  
