--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/analisis_marcha.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/analisis_marcha.html
@@ -26,16 +26,19 @@
 
 		<div data-role="page">
 			<!-- Cabecera -->
-			<div data-role="header" data-position="inline">
-				<h3>An&aacute;lisis observacional de la marcha - LAM</h3>
+			<div data-role="header" >                    
+				<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 				<a data-rel="back" data-icon="back">Volver</a>
 				<a onclick="javascript:analisis_marcha.server()" data-icon="check">Guardar</a>
-			</div>			
+				
+				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
+					<h2 class="subtitle">An&aacute;lisis observacional de la marcha</h2>
+					<div id="username" class="username"></div>
+				</div>
+			</div>
 			
 			<!-- Cuerpo -->
 			<div data-role="content">				
-				<h2>An&aacute;lisis observacional de la marcha</h2>
-				
 				<div class="content2">
 					<div data-role="fieldcontain">  
 						<label for="analisisObserMarcha">Descripci&oacute;n:</label>  						
