--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_listado.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/grafica_listado.html
@@ -38,15 +38,18 @@
 	<body>
 		<div data-role="page">
 			<!-- Cabecera -->
-			<div data-role="header" >                    
-				<h3>Listado de gr&aacute;ficas EMT - LAM</h3>
+			<div data-role="header">                    
+				<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 				<a data-rel="back" data-icon="back">Volver</a>
+				
+				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
+					<h2 class="subtitle">Listado de gr&aacute;ficas de ficheros EMT</h2>
+					<div id="username" class="username"></div>
+				</div>
 			</div>
 			
 			<!-- Contenido -->
 			<div data-role="content">
-				<h2>Listado de v&iacute;deos asociados</h2>			
-				
 				<div class="content2">
 					<ul data-role="listview" data-inset="true" id="graficaList"></ul>
 				</div>	
