--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/longitud_miembros_infe.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/longitud_miembros_infe.html
@@ -27,14 +27,18 @@
 		<div data-role="page">
 			<!-- Cabecera -->
 			<div data-role="header">                    
-				<h3>Longitud de miembros inferiores - LAM</h3>
+				<h1>Laboratorio An&aacute;lisis de Movimiento [LAM]</h1>
 				<a data-rel="back" data-icon="back">Volver</a>
-			   	<a onclick="javascript:longitud_miembros_inferiores.server()" data-icon="check">Guardar</a>
-			</div>			
+				<a data-icon="check" onclick="javascript:evaluacion_muscular_manual.server()" >Guardar</a>
+				
+				<div data-theme="b" id="second-header" class="ui-bar ui-bar-b">
+					<h2 class="subtitle">Longitud de Miembros Inferiores</h2>
+					<div id="username" class="username"></div>
+				</div>
+			</div>
 			
 			<!-- Contenido -->
-			<div data-role="content">			
-				<h2>Longitud de miembros inferiores</h2>				
+			<div data-role="content">							
 				<div class="content2">
 					<!-- Derecho -->
 					<div data-role="fieldcontain">  
